--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: https://bigota.d.miui.com/21.11.17/miui_PYXIS_21.11.17_e1c4c545ec_11.0.zip
-  ROM_NAME: Generic
+  ROM_NAME: Pixel
   BUILD_TYPE: Aonly
   TZ: Asia/Shanghai
 
